Bug 12412 - In vfs_fruit.c, fruit:resource is incorrectly referred to as fruit:ressource
Summary: In vfs_fruit.c, fruit:resource is incorrectly referred to as fruit:ressource
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: 4.5.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
: 12411 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-11-08 10:36 UTC by Shilpa Krishnareddy
Modified: 2016-12-20 08:39 UTC (History)
3 users (show)

See Also:


Attachments
Patch for 4.3, 4.4 and 4.5 as discussed on the ML (3.37 KB, patch)
2016-12-06 08:09 UTC, Ralph Böhme
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shilpa Krishnareddy 2016-11-08 10:36:10 UTC
In routine init_fruit_config(), fruit:resource is incorrectly checked as fruit:ressource:

         enumval = lp_parm_enum(SNUM(handle->conn), FRUIT_PARAM_TYPE_NAME,
                                "ressource", fruit_rsrc, FRUIT_RSRC_ADFILE);
Comment 1 Aaron Laffin 2016-12-05 21:06:16 UTC
*** Bug 12411 has been marked as a duplicate of this bug. ***
Comment 2 Ralph Böhme 2016-12-06 08:09:04 UTC
Created attachment 12726 [details]
Patch for 4.3, 4.4 and 4.5 as discussed on the ML
Comment 3 Jeremy Allison 2016-12-06 23:05:21 UTC
Reassigning to Karolin for inclusion in 4.5.next, 4.4.next.
Comment 4 Karolin Seeger 2016-12-07 11:10:05 UTC
(In reply to Jeremy Allison from comment #3)
Pushed to autobuild-{5,4}-test.
Comment 5 Karolin Seeger 2016-12-20 08:39:47 UTC
(In reply to Karolin Seeger from comment #4)
Pushed to both branches.
Closing out bug report.

Thanks!